Add new alternate view ConstrainedValueParameterConfigurationView for configuring the ValidValues ItemSet (#1390)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5345 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Parameters.Views/3.3/HeuristicLab.Parameters.Views-3.3.csproj
+++ b/sources/HeuristicLab.Parameters.Views/3.3/HeuristicLab.Parameters.Views-3.3.csproj
@@ -118,6 +118,12 @@
     <Compile Include="ConstrainedValueParameterView.Designer.cs">
       <DependentUpon>ConstrainedValueParameterView.cs</DependentUpon>
     </Compile>
+    <Compile Include="ConstrainedValueParameterConfigurationView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ConstrainedValueParameterConfigurationView.Designer.cs">
+      <DependentUpon>ConstrainedValueParameterConfigurationView.cs</DependentUpon>
+    </Compile>
     <Compile Include="ScopeTreeLookupParameterView.cs">
       <SubType>UserControl</SubType>
     </Compile>
