--- a/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
@@ -107,6 +107,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Symbolic\Symbols\Derivative.cs" />
+    <Compile Include="Symbolic\Symbols\Integral.cs" />
+    <Compile Include="Symbolic\Symbols\TimeLag.cs" />
     <Compile Include="Symbolic\TypeCoherentExpressionGrammar.cs" />
     <Compile Include="Symbolic\Symbols\Power.cs" />
     <Compile Include="TableFileParser.cs" />
@@ -132,6 +135,7 @@
     <Compile Include="Evaluators\SimpleRSquaredEvaluator.cs" />
     <Compile Include="Evaluators\SimpleVarianceAccountedForEvaluator.cs" />
     <Compile Include="HeuristicLabProblemsDataAnalysisPlugin.cs" />
+    <Compile Include="Interfaces\ILaggedTreeNode.cs" />
     <Compile Include="Interfaces\ISingleObjectiveDataAnalysisProblem.cs" />
     <Compile Include="Interfaces\IDataAnalysisModel.cs" />
     <Compile Include="Interfaces\IDataAnalysisProblem.cs" />
@@ -150,8 +154,10 @@
     <Compile Include="Symbolic\SimpleArithmeticExpressionInterpreter.cs" />
     <Compile Include="Symbolic\SymbolicSimplifier.cs" />
     <Compile Include="Symbolic\Symbols\Addition.cs" />
+    <Compile Include="Symbolic\Symbols\LaggedSymbol.cs" />
     <Compile Include="Symbolic\Symbols\Constant.cs" />
     <Compile Include="Symbolic\Symbols\ConstantTreeNode.cs" />
+    <Compile Include="Symbolic\Symbols\LaggedTreeNode.cs" />
     <Compile Include="Symbolic\Symbols\LaggedVariable.cs" />
     <Compile Include="Symbolic\Symbols\LaggedVariableTreeNode.cs" />
     <Compile Include="Symbolic\Symbols\GreaterThan.cs" />
