#1395  * Allowed to select the bounds checker to use in all `RealVectorManipulator` and `RealVectorCrossover` operators  * Added a second bounds checker, the `ReflectiveBoundsChecker` which does not cut at the bounds, but mirrors the vector at the bounds  * Use a repeating strategy in the move generators  * Removed obsolete `IRealVectorPSODecoder` and `IRealVectorPSOEncoder` interfaces  * Marked `RealVectorToRealVectorEncoder` as obsolete, internal and removed all meaningful code from it (it slipped into the release and should be thrown out as soon as possible)  * Use a repeating strategy to stick within the bounds in the `StdDevStrategyVectorManipulator` when manipulating the mutation strengths  * By default use smaller initial bounds in the `StdDevStrategyVectorCreator` (parameterized by the problem)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5381 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Encodings.RealVectorEncoding/3.3/HeuristicLab.Encodings.RealVectorEncoding-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.RealVectorEncoding/3.3/HeuristicLab.Encodings.RealVectorEncoding-3.3.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>HeuristicLab.Encodings.RealVectorEncoding</RootNamespace>
     <AssemblyName>HeuristicLab.Encodings.RealVectorEncoding-3.3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile></TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
@@ -156,6 +157,7 @@
     <Compile Include="Manipulators\MichalewiczNonUniformOnePositionManipulator.cs" />
     <Compile Include="Manipulators\PolynomialOnePositionManipulator.cs" />
     <Compile Include="Manipulators\UniformOnePositionManipulator.cs" />
+    <Compile Include="ReflectiveBoundsChecker.cs" />
     <Compile Include="StrategyParameters\StdDevStrategyVectorCreator.cs" />
     <Compile Include="StrategyParameters\StdDevStrategyVectorCrossover.cs" />
     <Compile Include="StrategyParameters\StdDevStrategyVectorManipulator.cs" />
