--- a/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
@@ -107,6 +107,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Symbolic\Symbols\Root.cs" />
     <Compile Include="Symbolic\Symbols\Derivative.cs" />
     <Compile Include="Symbolic\Symbols\Integral.cs" />
     <Compile Include="Symbolic\Symbols\TimeLag.cs" />
