--- a/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
+++ b/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Symbolic\Formatters\SymbolicExpressionTreeLatexFormatter.cs" />
+    <Compile Include="Symbolic\Formatters\SymbolicExpressionTreeMATLABFormatter.cs" />
     <Compile Include="Symbolic\Symbols\Root.cs" />
     <Compile Include="Symbolic\Symbols\Derivative.cs" />
     <Compile Include="Symbolic\Symbols\Integral.cs" />
