--- a/sources/HeuristicLab.MainForm.WindowsForms/3.3/HeuristicLab.MainForm.WindowsForms-3.3.csproj
+++ b/sources/HeuristicLab.MainForm.WindowsForms/3.3/HeuristicLab.MainForm.WindowsForms-3.3.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>HeuristicLab.MainForm.WindowsForms</RootNamespace>
     <AssemblyName>HeuristicLab.MainForm.WindowsForms-3.3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile></TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
@@ -111,82 +112,88 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionUserInterfaceItem.cs" />
-    <Compile Include="AsynchronousContentView.cs">
+    <Compile Include="Controls\DragOverTabControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controls\DragOverTabControl.Designer.cs">
+      <DependentUpon>DragOverTabControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AsynchronousContentView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="AsynchronousContentView.Designer.cs">
+    <Compile Include="Views\AsynchronousContentView.Designer.cs">
       <DependentUpon>AsynchronousContentView.cs</DependentUpon>
     </Compile>
-    <Compile Include="ContentView.cs">
+    <Compile Include="Views\ContentView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ContentView.Designer.cs">
+    <Compile Include="Views\ContentView.Designer.cs">
       <DependentUpon>ContentView.cs</DependentUpon>
     </Compile>
     <None Include="HeuristicLabMainFormWindowsFormsPlugin.cs.frame" />
-    <Compile Include="ControlExtensions.cs" />
-    <Compile Include="DockForm.cs">
+    <Compile Include="Controls\ControlExtensions.cs" />
+    <Compile Include="MainForms\DockForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DockForm.Designer.cs">
+    <Compile Include="MainForms\DockForm.Designer.cs">
       <DependentUpon>DockForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DockingMainForm.cs">
+    <Compile Include="MainForms\DockingMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DockingMainForm.Designer.cs">
+    <Compile Include="MainForms\DockingMainForm.Designer.cs">
       <DependentUpon>DockingMainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Sidebar.cs">
+    <Compile Include="Controls\Sidebar.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Sidebar.Designer.cs">
+    <Compile Include="Controls\Sidebar.Designer.cs">
       <DependentUpon>Sidebar.cs</DependentUpon>
     </Compile>
-    <Compile Include="DocumentForm.cs">
+    <Compile Include="MainForms\DocumentForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DocumentForm.Designer.cs">
+    <Compile Include="MainForms\DocumentForm.Designer.cs">
       <DependentUpon>DocumentForm.cs</DependentUpon>
     </Compile>
     <Compile Include="HeuristicLabMainFormWindowsFormsPlugin.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="MainForms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="MainForms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MenuItem.cs" />
-    <Compile Include="MultipleDocumentMainForm.cs">
+    <Compile Include="MainForms\MultipleDocumentMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MultipleDocumentMainForm.Designer.cs">
+    <Compile Include="MainForms\MultipleDocumentMainForm.Designer.cs">
       <DependentUpon>MultipleDocumentMainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SingleDocumentMainForm.cs">
+    <Compile Include="MainForms\SingleDocumentMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SingleDocumentMainForm.Designer.cs">
+    <Compile Include="MainForms\SingleDocumentMainForm.Designer.cs">
       <DependentUpon>SingleDocumentMainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ToolBarItem.cs" />
-    <Compile Include="View.cs">
+    <Compile Include="Views\View.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View.Designer.cs">
+    <Compile Include="Views\View.Designer.cs">
       <DependentUpon>View.cs</DependentUpon>
     </Compile>
-    <Compile Include="ViewContextMenuStrip.cs">
+    <Compile Include="Controls\ViewContextMenuStrip.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="ViewContextMenuStrip.Designer.cs">
+    <Compile Include="Controls\ViewContextMenuStrip.Designer.cs">
       <DependentUpon>ViewContextMenuStrip.cs</DependentUpon>
     </Compile>
-    <Compile Include="ViewHost.cs">
+    <Compile Include="Controls\ViewHost.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ViewHost.Designer.cs">
+    <Compile Include="Controls\ViewHost.Designer.cs">
       <DependentUpon>ViewHost.cs</DependentUpon>
     </Compile>
   </ItemGroup>
