Add a simple TupleSerializer for .NET 4.0 Tuple types. (#1442)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5698 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Default\CompositeSerializers\ArraySerializer.cs" />
     <Compile Include="Default\CompositeSerializers\CompactNumberArray2StringSerializer.cs" />
     <Compile Include="Default\CompositeSerializers\ConcreteDictionarySerializer.cs" />
+    <Compile Include="Default\CompositeSerializers\TupleSerializer.cs" />
     <Compile Include="Default\CompositeSerializers\HashSetSerializer.cs" />
     <Compile Include="Default\CompositeSerializers\DictionarySerializer.cs" />
     <Compile Include="Default\CompositeSerializers\EnumerableSerializer.cs" />
