#567  * Added item template  * Adapted problem template  * Enabled tab key to continue editing the next column in the grid
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5704 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/tools/Templates/HeuristicLab.VS2010Wizards/HeuristicLab.VS2010Wizards.csproj
+++ b/tools/Templates/HeuristicLab.VS2010Wizards/HeuristicLab.VS2010Wizards.csproj
@@ -90,6 +90,13 @@
     <Compile Include="AlgorithmWizardForm.Designer.cs">
       <DependentUpon>AlgorithmWizardForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ItemWizard.cs" />
+    <Compile Include="ItemWizardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ItemWizardForm.Designer.cs">
+      <DependentUpon>ItemWizardForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProblemWizardForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +130,9 @@
   <ItemGroup>
     <EmbeddedResource Include="AlgorithmWizardForm.resx">
       <DependentUpon>AlgorithmWizardForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ItemWizardForm.resx">
+      <DependentUpon>ItemWizardForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProblemWizardForm.resx">
       <DependentUpon>ProblemWizardForm.cs</DependentUpon>
