Added VNS sample (#1425)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5755 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
+++ b/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
@@ -114,6 +114,7 @@
     <EmbeddedResource Include="Documents\GA_VRP.hl" />
     <EmbeddedResource Include="Documents\SGP_SymbClass_Mammographic.hl" />
     <EmbeddedResource Include="Documents\SGP_SymbReg.hl" />
+    <EmbeddedResource Include="Documents\VNS_TSP.hl" />
     <None Include="HeuristicLabOptimizerPlugin.cs.frame" />
     <Compile Include="CreateExperimentDialog.cs">
       <SubType>Form</SubType>
