--- a/sources/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
+++ b/sources/HeuristicLab/3.3/Tests/HeuristicLab-3.3.Tests.csproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <Compile Include="CloningConstructorTest.cs" />
     <Compile Include="ContentViewTests.cs" />
+    <Compile Include="SymbolicRegressionTest.cs" />
     <Compile Include="PluginDependenciesTest.cs" />
     <Compile Include="PluginLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -521,6 +522,9 @@
   <ItemGroup>
     <None Include="Builder.testsettings">
       <SubType>Designer</SubType>
+    </None>
+    <None Include="GA_SymbReg.hl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="GA_TSP.hl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
