--- a/sources/HeuristicLab.Problems.DataAnalysis.Views/3.4/HeuristicLab.Problems.DataAnalysis.Views-3.4.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis.Views/3.4/HeuristicLab.Problems.DataAnalysis.Views-3.4.csproj
@@ -109,6 +109,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassificationSolutionView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ClassificationSolutionView.Designer.cs">
+      <DependentUpon>ClassificationSolutionView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classification\ClassificationSolutionConfusionMatrixView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -133,12 +139,22 @@
     <Compile Include="Classification\DiscriminantFunctionClassificationRocCurvesView.Designer.cs">
       <DependentUpon>DiscriminantFunctionClassificationRocCurvesView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Classification\DiscriminantFunctionClassificationSolutionView.cs">
+    <Compile Include="Classification\DiscriminantFunctionClassificationSolutionThresholdView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Classification\DiscriminantFunctionClassificationSolutionView.Designer.cs">
+    <Compile Include="Classification\DiscriminantFunctionClassificationSolutionThresholdView.Designer.cs">
+      <DependentUpon>DiscriminantFunctionClassificationSolutionThresholdView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DiscriminantFunctionClassificationSolutionView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DiscriminantFunctionClassificationSolutionView.Designer.cs">
       <DependentUpon>DiscriminantFunctionClassificationSolutionView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IDataAnalysisSolutionEvaluationView.cs" />
+    <Compile Include="Interfaces\IDiscriminantFunctionClassificationSolutionEvaluationView.cs" />
+    <Compile Include="Interfaces\IClusteringSolutionEvaluationView.cs" />
+    <Compile Include="Interfaces\IClassificationSolutionEvaluationView.cs" />
     <Compile Include="DataAnalysisSolutionView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -150,6 +166,13 @@
     </Compile>
     <Compile Include="DoubleLimitView.Designer.cs">
       <DependentUpon>DoubleLimitView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaces\IRegressionSolutionEvaluationView.cs" />
+    <Compile Include="RegressionSolutionView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="RegressionSolutionView.Designer.cs">
+      <DependentUpon>RegressionSolutionView.cs</DependentUpon>
     </Compile>
     <Compile Include="Regression\RegressionSolutionEstimatedValuesView.cs">
       <SubType>UserControl</SubType>
@@ -182,6 +205,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\HeuristicLab.Collections\3.3\HeuristicLab.Collections-3.3.csproj">
+      <Project>{958B43BC-CC5C-4FA2-8628-2B3B01D890B6}</Project>
+      <Name>HeuristicLab.Collections-3.3</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.Common.Resources\3.3\HeuristicLab.Common.Resources-3.3.csproj">
+      <Project>{0E27A536-1C4A-4624-A65E-DC4F4F23E3E1}</Project>
+      <Name>HeuristicLab.Common.Resources-3.3</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Common\3.3\HeuristicLab.Common-3.3.csproj">
       <Project>{A9AD58B9-3EF9-4CC1-97E5-8D909039FF5C}</Project>
       <Name>HeuristicLab.Common-3.3</Name>
