--- a/sources/HeuristicLab.Problems.ExternalEvaluation.Views/3.3/HeuristicLab.Problems.ExternalEvaluation.Views-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ExternalEvaluation.Views/3.3/HeuristicLab.Problems.ExternalEvaluation.Views-3.3.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>HeuristicLab.Problems.ExternalEvaluation.Views</RootNamespace>
     <AssemblyName>HeuristicLab.Problems.ExternalEvaluation.Views-3.3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile></TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
@@ -177,14 +178,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="EvaluationServiceClientView.resx">
-      <DependentUpon>EvaluationServiceClientView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SolutionMessageBuilderView.resx">
-      <DependentUpon>SolutionMessageBuilderView.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
