Implemented review comments of mkommend (#1112)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5837 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common/3.3/HeuristicLab.Common-3.3.csproj
+++ b/sources/HeuristicLab.Common/3.3/HeuristicLab.Common-3.3.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Cloner.cs" />
     <Compile Include="Content\ContentManager.cs" />
     <Compile Include="Content\IStorableContent.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="DeepCloneable.cs" />
     <Compile Include="Content\IContent.cs" />
     <Compile Include="EnumerableStatisticExtensions.cs" />
