Adopt TypeCoherentExpressionGrammar from HeuristicLab.Problems.DataAnalysis.Symbolic for external evaluation (#1459)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5881 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.ExternalEvaluation.GP/3.3/HeuristicLab.Problems.ExternalEvaluation.GP-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ExternalEvaluation.GP/3.3/HeuristicLab.Problems.ExternalEvaluation.GP-3.3.csproj
@@ -108,6 +108,7 @@
   <ItemGroup>
     <None Include="HeuristicLabProblemsExternalEvaluationGPPlugin.cs.frame" />
     <Compile Include="Grammar\FullFunctionalExpressionGrammar.cs" />
+    <Compile Include="Grammar\TypeCoherentExpressionGrammar.cs" />
     <Compile Include="HeuristicLabProblemsExternalEvaluationGPPlugin.cs" />
     <Compile Include="Interpretation\ITreeInterpreter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
