#1418: Adapted interfaces of data analysis classes.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5883 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.DataAnalysis.Symbolic/3.4/HeuristicLab.Problems.DataAnalysis.Symbolic-3.4.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis.Symbolic/3.4/HeuristicLab.Problems.DataAnalysis.Symbolic-3.4.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Formatters\SymbolicDataAnalysisExpressionMATLABFormatter.cs" />
     <Compile Include="Interfaces\ISymbolicDataAnalysisBoundedOperator.cs" />
     <Compile Include="Interfaces\ISymbolicDataAnalysisExpressionTreeInterpreter.cs" />
+    <Compile Include="Interfaces\ISymbolicDataAnalysisProblem.cs" />
     <Compile Include="SymbolicDataAnalysisExpressionTreeCreator.cs" />
     <Compile Include="SymbolicDataAnalysisModel.cs">
       <SubType>Code</SubType>
