#1418 fixed assembly name and namespace for symbolic data analysis tests assembly.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5890 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.DataAnalysis.Symbolic/3.4/Tests/HeuristicLab.Problems.DataAnalysis.Symbolic.Tests-3.4.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis.Symbolic/3.4/Tests/HeuristicLab.Problems.DataAnalysis.Symbolic.Tests-3.4.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{2A976109-67B9-4FF0-89DE-A26A8307A1CE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeuristicLab.Problems.DataAnalysis.Tests_3._3</RootNamespace>
-    <AssemblyName>HeuristicLab.Problems.DataAnalysis.Tests-3.3</AssemblyName>
+    <RootNamespace>HeuristicLab.Problems.DataAnalysis.Symbolic.Tests_3._4</RootNamespace>
+    <AssemblyName>HeuristicLab.Problems.DataAnalysis.Symbolic.Tests-3.4</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
