#1453: Added !UnitTest for `OnlineCalculators` to enable performance monitoring.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5952 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.DataAnalysis/3.4/Tests/HeuristicLab.Problems.DataAnalysis.Tests-3.4.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis/3.4/Tests/HeuristicLab.Problems.DataAnalysis.Tests-3.4.csproj
@@ -108,6 +108,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OnlineCalculatorPerformanceTest.cs" />
     <Compile Include="TableFileParserTest.cs" />
     <Compile Include="StatisticCalculatorsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
